# Rover

./: .gitignore  AGENTS.md  DECISIONS.md  README.md  SPEC.md  hacs.json  pyproject.toml
.github/workflows/: release.yml  test.yml  validate.yml
app/: AGENT.md  README.md
back/: AGENT.md  README.md  hacs.json  manifest.json  pyproject.toml
back/rover/: __init__.py  codec.py  config.py  config_flow.py  const.py  dispatcher.py  ha_bridge.py  logger.py  queue.py  registry.py  state_extractor.py
back/tests/: test_codec.py  test_queue.py  test_registry.py  test_state_extractor.py
back/translations/: en.json  ru.json
card/: AGENT.md  README.md  hacs.json  package.json  rollup.config.js  tsconfig.json
card/src/: rover-card.ts
card/src/state/: ha-bridge.ts
custom_components/rover/: __init__.py  codec.py  commands.py  config_flow.py  const.py  dispatcher.py  ha_bridge.py  handlers.py  manifest.json  options_flow.py  queue.py  registry.py  rns_transport.py  services.py  services.yaml  state_extractor.py  test_e2e.py  transport.py
custom_components/rover/translations/: en.json  ru.json
rover.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_codec.py  test_commands.py  test_dispatcher.py  test_ha_bridge.py  test_handlers.py  test_options_flow.py  test_queue.py  test_registry.py  test_rns_transport.py  test_services.py  test_state_extractor.py  test_transport.py
