[project]
name = "rover"
version = "0.3.5"
description = "Rover — Remote Over Radio для Home Assistant"
requires-python = ">=3.12"
dependencies = [
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "voluptuous>=0.13",
    "homeassistant>=2026.4",
    "pytest-homeassistant-custom-component",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["custom_components"]
asyncio_mode = "auto"

